--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ts-node-dev ./src/server.ts",
     "start:prod": "NODE_ENV=production ts-node ./src/server.ts",
     "debug": "ndb server.js",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
@@ -27,14 +28,17 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.12.4",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.3.2",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.3.5"
