--- a/config.env
+++ b/config.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
-PORT=5000
-DATABASE_LOCAL=mongodb://localhost:27017/shopway
-DATABASE_PASSWORD=On0adDgBCE5ECWh6
+PORT=3000
+DATABASE=mongodb://mongodb:27017/shopway
+DATABASE_PASSWORD=4&Kkm+6S?(
