--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Shopway is a web application whose goal is to help local shop owners make theri products more visibile.",
   "main": "app.js",
   "scripts": {
-    "start": "ts-node-dev ./src/server.ts",
+    "start": "NODE_ENV=development ts-node-dev ./src/server.ts",
     "start:prod": "NODE_ENV=production ts-node ./src/server.ts",
     "debug": "ndb server.js",
     "build": "tsc -p .",
@@ -17,17 +17,22 @@
   "author": "Alberto Marfoglia",
   "license": "ISC",
   "dependencies": {
+    "@tsed/common": "^6.62.3",
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
+    "mongodb": "^4.1.0",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "slugify": "^1.3.4",
     "validator": "^13.6.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
