--- a/config.env
+++ b/config.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
 PORT=3000
 DATABASE=mongodb://mongodb:27017/shopway
-DATABASE_PASSWORD=4&Kkm+6S?(
+JWT_SECRET=tH+{5%hGbYFn(cBu%>H{$'Sd8W]4S,%~
+JWT_EXPIRES_IN=90d
+JWT_COOKIE_EXPIRES_IN=90
