--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
   "author": "Alberto Marfoglia",
   "license": "ISC",
   "dependencies": {
-    "@tsed/common": "^6.62.3",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
@@ -26,7 +25,8 @@
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "slugify": "^1.3.4",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "@tsed/common": "^6.62.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -34,6 +34,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/util.promisify": "^1.0.4",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
