--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Alberto Marfoglia",
   "license": "ISC",
   "dependencies": {
+    "@tsed/common": "^6.62.3",
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
@@ -24,9 +25,9 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
+    "nodemailer": "^6.6.3",
     "slugify": "^1.3.4",
-    "validator": "^13.6.0",
-    "@tsed/common": "^6.62.3"
+    "validator": "^13.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -34,6 +35,7 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.4",
     "@types/util.promisify": "^1.0.4",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
