--- a/config.env
+++ b/config.env
@@ -13,3 +13,5 @@ EMAIL_PASSWORD=ee377f9047bc1f
 EMAIL_HOST=smtp.mailtrap.io
 EMAIL_PORT=25
 EMAIL_MSG=Forgot your password? Submit a PATCH request with your new password and passwordConfirm to: <RESET_URL>.\nIf you didn't forget your password, please ignore this email!
+
+JWT_COOKIE_EXPIRES_IN=90
