--- a/package.json
+++ b/package.json
@@ -21,19 +21,25 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
+    "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.3.0",
+    "helmet": "^4.6.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.0",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
     "nodemailer": "^6.6.3",
     "slugify": "^1.3.4",
-    "validator": "^13.6.0"
+    "validator": "^13.6.0",
+    "xss": "^1.0.9",
+    "xss-clean": "^0.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
