add photo upload for the user

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "mongodb": "^4.1.0",
     "mongoose": "^5.5.2",
     "morgan": "^1.9.1",
+    "multer": "^1.4.3",
     "nodemailer": "^6.6.3",
+    "sharp": "^0.29.0",
     "slugify": "^1.3.4",
     "validator": "^13.6.0",
     "xss": "^1.0.9",
@@ -43,7 +45,9 @@
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
+    "@types/sharp": "^0.28.5",
     "@types/util.promisify": "^1.0.4",
     "@types/validator": "^13.6.3",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
