--- a/.dockerignore
+++ b/.dockerignore
@@ -20,4 +20,10 @@
 **/obj
 **/secrets.dev.yaml
 **/values.dev.yaml
+node_modules
+npm-debug.log
+Dockerfile
+.dockerignore
+.git
+.gitignore
 README.md
