--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "license": "ISC",
   "dependencies": {
     "@tsed/common": "^6.62.3",
-    "bcrypt": "^5.0.1",
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "express-mongo-sanitize": "^2.1.0",
@@ -38,7 +39,6 @@
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
     "@types/hpp": "^0.2.2",
