--- a/app/package.json
+++ b/app/package.json
@@ -4,8 +4,8 @@
   "description": "Shopway is a web application whose goal is to help local shop owners make theri products more visibile.",
   "main": "app.js",
   "scripts": {
-    "start": "NODE_ENV=development ts-node-dev ./src/server.ts",
-    "start:prod": "NODE_ENV=production ts-node ./src/server.ts",
+    "start": "ts-node-dev ./src/server.ts",
+    "start:prod": "ts-node ./src/server.ts",
     "debug": "ndb server.js",
     "build": "tsc -p .",
     "lint": "eslint ./"
