--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - 5000:5000
     volumes:
-      - ./app/src:/usr/src/app/src
+      - ./src:/usr/src/app/src
     links:
       - mongodb
   mongodb:
