--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENV=development
 PORT=5000
-DATABASE=mongodb://mongodb:27017/shopway
+DATABASE=mongodb://localhost:27017/shopway
 
 JWT_SECRET=tH+{5%hGbYFn(cBu%>H{$'Sd8W]4S,%~
 JWT_EXPIRES_IN=90d
