--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "yup-phone": "^1.2.19"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
