--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sharp": "^0.29.0",
     "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^1.1.2",
