--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "sharp": "^0.29.0",
     "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4",
+    "use-debounce": "^7.0.0",
     "web-vitals": "^1.1.2",
     "yup": "^0.32.9",
     "yup-phone": "^1.2.19"
