--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "date-fns": "^2.23.0",
     "dotenv": "^10.0.0",
     "express": "^4.16.4",
     "express-mongo-sanitize": "^2.1.0",
