--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-query": "^3.23.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sharp": "^0.29.0",
