--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.0",
+    "local-ip-address": "^1.0.0",
     "material-ui-image": "^3.3.2",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-query": "^3.23.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@types/ip": "^1.1.0",
     "@types/jest": "^26.0.24",
     "@types/material-ui": "^0.21.9",
     "@types/node": "^12.20.19",
