--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "js-cookie": "^3.0.0",
     "local-ip-address": "^1.0.0",
     "material-ui-image": "^3.3.2",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
