--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "sharp": "^0.29.0",
     "slugify": "^1.3.4",
     "universal-cookie": "^4.0.4",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0",
     "voucher-code-generator": "^1.1.1",
     "xss": "^1.0.9",
@@ -56,6 +57,7 @@
     "@types/nodemailer": "^6.4.4",
     "@types/sharp": "^0.28.5",
     "@types/util.promisify": "^1.0.4",
+    "@types/uuid": "^8.3.1",
     "@types/validator": "^13.6.3",
     "@types/voucher-code-generator": "^1.1.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
