--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-swipeable-views": "^0.14.0",
     "sharp": "^0.29.0",
     "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4",
@@ -44,6 +45,7 @@
     "@types/react": "^17.0.19",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-swipeable-views": "^0.13.1",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
     "eslint": "^7.32.0",
