--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.28.3",
     "axios": "^0.21.1",
-    "chart.js": "^3.5.1",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.0",
-    "local-ip-address": "^1.0.0",
     "material-ui-image": "^3.3.2",
     "moment": "^2.29.1",
-    "object-to-formdata": "^4.1.0",
     "react": "^17.0.2",
-    "react-chartjs-2": "^3.0.5",
+    "react-apexcharts": "^1.3.9",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
@@ -38,7 +36,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
-    "@types/ip": "^1.1.0",
     "@types/jest": "^26.0.24",
     "@types/material-ui": "^0.21.9",
     "@types/node": "^12.20.19",
