--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-swipeable-views": "^0.14.0",
     "sharp": "^0.29.0",
+    "socket.io-client": "^4.2.0",
     "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4",
     "use-debounce": "^7.0.0",
