--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "license": "ISC",
   "dependencies": {
     "@tsed/common": "^6.62.3",
-    "@types/bcryptjs": "^2.4.2",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.23.0",
@@ -27,6 +26,7 @@
     "express": "^4.16.4",
     "express-mongo-sanitize": "^2.1.0",
     "express-rate-limit": "^5.3.0",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
@@ -38,6 +38,7 @@
     "nodemailer": "^6.6.3",
     "sharp": "^0.29.0",
     "slugify": "^1.3.4",
+    "socket.io": "^4.2.0",
     "universal-cookie": "^4.0.4",
     "uuid": "^8.3.2",
     "validator": "^13.6.0",
@@ -49,6 +50,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/express-rate-limit": "^5.1.3",
+    "@types/bcryptjs": "^2.4.2",
     "@types/hpp": "^0.2.2",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/mongoose-autopopulate": "^0.10.2",
