--- a/config.env
+++ b/config.env
@@ -1,6 +1,7 @@
 NODE_ENV=production
 PORT=5000
 DATABASE=mongodb://mongodb:27017/shopway
+ORIGIN=http://localhost:3000
 
 JWT_SECRET=tH+{5%hGbYFn(cBu%>H{$'Sd8W]4S,%~
 JWT_EXPIRES_IN=90d
