--- a/shopway-backend/Dockerfile
+++ b/shopway-backend/Dockerfile
@@ -3,18 +3,16 @@ FROM node:12-buster-slim
 RUN apt-get update && apt-get upgrade -y
 RUN apt-get install python3 -y
 
-ENV WORKINGDIR=/shopway/app
+ENV WORKINGDIR=/root/app
 
 WORKDIR ${WORKINGDIR}
 
-RUN	mkdir ${WORKINGDIR}
-
-# COPY .  ${WORKINGDIR}/
-COPY src ./src
-COPY tsconfig.json .
-COPY package.json .
-COPY package-lock.json .
-COPY config.env .
+COPY .  ${WORKINGDIR}/
+#COPY src ./src
+#COPY tsconfig.json .
+#COPY package.json .
+#COPY package-lock.json .
+#COPY config.env .
 
 RUN	npm install
 RUN npm run build
