--- a/shopway-backend/package.json
+++ b/shopway-backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "ts-node-dev ./src/server.ts",
-    "start:prod": "node ./dist/server.ts",
+    "start:prod": "node ./dist/server.js",
     "debug": "ndb server.js",
     "build": "tsc -p .",
     "lint": "eslint ./"
