--- a/shopway-frontend/Dockerfile
+++ b/shopway-frontend/Dockerfile
@@ -14,4 +14,5 @@ FROM flashspys/nginx-static
 
 RUN apk update && apk upgrade
 
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 COPY --from=0 /root/app/build /static
